[package]
name = "merlin"
version = "2.0.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/merlin"
homepage = "https://docs.rs/merlin"
documentation = "https://docs.rs/merlin"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "fiat-shamir", "transcript"]
description = "Composable proof transcripts for public-coin arguments of knowledge"
exclude = [".travis.yml", ".gitignore"]

[package.metadata.docs.rs]
# We need nightly to build docs
features = ["nightly"]

[dependencies]
keccak = { version = "0.1.0", default-features = false }
byteorder = { version = "1.2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
hex = {version = "0.3", default-features = false, optional = true}

[dependencies.rc6]
package = "rand_core"
version = "0.6"
default-features = false
optional = true

[dependencies.rc5]
package = "rand_core"
version = "0.5"
default-features = false
optional = true

[dev-dependencies]
strobe-rs = "0.5"
curve25519-dalek-ng = "4.0"
rand_chacha = "0.3"

[features]
default = ["std", "rc6", "std6"]
nightly = []
debug-transcript = ["hex"]
std = ["byteorder/std"]
std6 = ["rc6/std"]
std5 = ["rc5/std"]
